<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <RelativeLayout
        android:background="@color/steelblue"
        android:layout_width="match_parent"
        android:layout_weight="0.4"
        android:layout_height="0dp">
        <com.xdk.df.parentend.widget.CircleImageView
            android:layout_width="150dp"
            android:src="@drawable/test_touxiang"
            app:border_color="@android:color/transparent"
            android:layout_height="150dp"
            android:onClick="optionClick"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/main_img_student_photo" />
        <TextView
            android:id="@+id/main_tx_student_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="高三三班王雪"
            android:textSize="16sp"
            android:layout_below="@+id/main_img_student_photo"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_weight="0.6"
        android:layout_height="0dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_new_message"
                android:clickable="true"
                android:onClick="optionClick"
                android:gravity="center"
                android:background="@drawable/main_option_selecter"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico01"
                    android:layout_above="@+id/textView2"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_new_message"
                    android:textSize="16sp"
                    android:id="@+id/textView2"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_today_check"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico04"
                    android:layout_above="@+id/textView44"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_new_check"
                    android:textSize="16sp"
                    android:id="@+id/textView44"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_new_check"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico02"
                    android:layout_above="@+id/textView3"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_new_test"
                    android:textSize="16sp"
                    android:id="@+id/textView3"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_student_foods"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico07"
                    android:layout_above="@+id/textView7"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_school_dining"
                    android:textSize="16sp"
                    android:id="@+id/textView7"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_student_info"
                android:clickable="true"
                android:onClick="optionClick"
                android:gravity="center"
                android:background="@drawable/main_option_selecter"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico09"
                    android:layout_above="@+id/textView8"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_student_info"
                    android:textSize="16sp"
                    android:id="@+id/textView8"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_student_subject"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico08"
                    android:layout_above="@+id/textView77"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_study_subject"
                    android:textSize="16sp"
                    android:id="@+id/textView77"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_contact_teacher"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico03"
                    android:layout_above="@+id/textView4"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_contact_teacher"
                    android:textSize="16sp"
                    android:id="@+id/textView4"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_class_life"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico05"
                    android:layout_above="@+id/textView5"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_class_life"
                    android:textSize="16sp"
                    android:id="@+id/textView5"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_contact_us"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico10"
                    android:layout_above="@+id/textView9"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_kecheng"
                    android:textSize="16sp"
                    android:id="@+id/textView9"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/main_school_introduce"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico06"
                    android:layout_above="@+id/textView6"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_school_describe"
                    android:textSize="16sp"
                    android:id="@+id/textView6"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_pay_money"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico11"
                    android:layout_above="@+id/textView"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="充值缴费"
                    android:textSize="16sp"
                    android:id="@+id/textView"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/main_more"
                android:clickable="true"
                android:onClick="optionClick"
                android:background="@drawable/main_option_selecter"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico12"
                    android:layout_above="@+id/textView0"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_option_more"
                    android:textSize="16sp"
                    android:id="@+id/textView0"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
